--- a/app/pages/register.html
+++ b/app/pages/register.html
@@ -6,27 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 
-    <title>Iniciar sesión</title>
+    <title>Registro</title>
 </head>
 
 <body>
     <main>
         <div class="form_container">
-            <h1>Iniciar sesión</h1>
-            <p>Accede a tu perfil</p>
-            <form id="login-form">
+            <h1>Crear cuenta</h1>
+            <p>Crea tu cuenta de manera simple.</p>
+            <form id="register-form">
                 <label for="user" class="sr-only">User</label>
                 <input type="text" name="user" id="user" placeholder="Nombre de usuario">
+                <label for="email" class="sr-only">Email</label>
+                <input type="email" name="email" id="email" placeholder="Correo electrónico">
                 <label for="password" class="sr-only">Password</label>
                 <input type="password" name="password" id="password" placeholder="Introduce tu contraseña">
                 <button type="submit">Iniciar sesión</button>
             </form>
-            <p>¿No tienes cuenta? <a href="/register">Regístrate</a></p>
-            <p class="error hidden">Error al iniciar sesión. </p>
+            <p>¿Tienes cuenta? <a href="/">Pulsa aquí</a></p>
+            <p class="error hidden">Error al registrarse. </p>
         </div>
     </main>
 
-    <script src="login.js" defer></script>
+    <script src="register.js" defer></script>
 </body>
 
 </html>
